plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'org.jooq.jooq-codegen-gradle' version '3.20.1'
}

group = 'org.certis'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // ✅ .env 파일은 Spring Boot의 spring.config.import로 처리

    // 데이터베이스
    // ✅ H2 제거하고 Embedded PostgreSQL 추가
    implementation('io.zonky.test:embedded-postgres:2.0.7') {  // 개발용 인메모리 PostgreSQL
        exclude group: 'org.slf4j', module: 'slf4j-simple'
    }
    runtimeOnly 'org.postgresql:postgresql'  // PostgreSQL 드라이버 (필수)

    // JWT 인증 (토큰 기반 인증 사용시)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Redis 캐싱 및 데이터 처리 (조회수/좋아요 캐싱용)
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'redis.clients:jedis' // Spring Boot 관리 버전 사용
    implementation 'org.redisson:redisson-spring-boot-starter:3.37.0'

    // jOOQ for CQRS Query Side
    implementation 'org.springframework.boot:spring-boot-starter-jooq'
    implementation 'org.jooq:jooq:3.20.1'
    implementation 'org.jooq:jooq-codegen:3.20.1'

    // 배치 처리 (주기적 DB 마이그레이션용)
    implementation 'org.springframework.boot:spring-boot-starter-batch'

    // 스케줄링
    implementation 'org.springframework.boot:spring-boot-starter-quartz'

    // 파일 업로드/처리
    implementation 'commons-io:commons-io:2.20.0'
    implementation 'org.apache.commons:commons-lang3:3.18.0'

    // 마크다운 처리 (블로그 글 작성용)
    implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'

    // 이미지 처리
    implementation 'org.imgscalr:imgscalr-lib:4.2'

    // WebSocket (실시간 채팅/알림용 - 선택사항)
    // implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // OpenAPI/Swagger 문서화
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

    // JSON 처리 개선
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.fasterxml.jackson.module:jackson-module-parameter-names'

    // 개발 도구
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // 어노테이션 프로세서
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // Lombok (선택사항 - 코드 간소화)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // jOOQ Code Generation Dependencies
    jooqCodegen 'org.postgresql:postgresql'
    jooqCodegen 'org.jooq:jooq-codegen:3.20.1'

    // 테스트
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.batch:spring-batch-test'

    // ✅ 테스트용 Embedded PostgreSQL 추가
    testImplementation('io.zonky.test:embedded-postgres:2.0.7') {
        exclude group: 'org.slf4j', module: 'slf4j-simple'
    }

    // TODO: DockerDesktop 이슈로 TestContainers 비활성화
//    testImplementation 'org.testcontainers:junit-jupiter'
//    testImplementation 'org.testcontainers:postgresql'
//    testImplementation 'org.testcontainers:redis'
    testImplementation 'it.ozimov:embedded-redis:0.7.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

//// Data setup tasks
//task setupMockData {
//    group = 'data'
//    description = 'Flush all data and setup mock data'
//
//    doLast {
//        println 'Setting up mock data...'
//        // This will be handled by Spring Boot's sql.init.mode=always
//        // and the SQL files in src/main/resources/db/
//    }
//}
//
//task flushData {
//    group = 'data'
//    description = 'Flush all data from database'
//
//    doLast {
//        println 'Flushing all data...'
//        // This will be handled by V1__Flush_all_data.sql
//    }
//}
//
//task resetDatabase {
//    group = 'data'
//    description = 'Flush all data and reset to initial state'
//    dependsOn flushData, setupMockData
//
//    doLast {
//        println 'Database reset completed!'
//    }
//}

// jOOQ Code Generation Configuration (Official Plugin Syntax)
// 개발용 기본값 사용 (환경변수는 Spring Boot에서 처리)
jooq {
    configuration {
        jdbc {
            driver = 'org.postgresql.Driver'
            url = "jdbc:postgresql://${System.getenv('DB_HOST') ?: 'localhost'}:${System.getenv('DB_PORT') ?: '5432'}/${System.getenv('DB_NAME') ?: 'studyplatform'}"
            user = System.getenv('DB_USERNAME') ?: 'studyplatform'
            password = System.getenv('DB_PASSWORD') ?: 'password'
        }
        generator {
            database {
                name = 'org.jooq.meta.postgres.PostgresDatabase'
                inputSchema = 'public'
                // PostgreSQL 메타데이터 오류 무시 설정
                includes = '.*'
                excludes = 'auth'  // auth 테이블 제외 (외래키 문제)
                // 외래키 관련 메타데이터 오류 방지
                recordVersionFields = ''
                recordTimestampFields = ''
                // 오류 발생 시 로그만 출력하고 계속 진행
                onError = 'LOG'
                // PostgreSQL 메타데이터 스키마 호환성 설정
                properties {
                    property {
                        key = 'defaultNameCase'
                        value = 'lower'
                    }
                    property {
                        key = 'defaultSchema'
                        value = 'public'
                    }
                    property {
                        key = 'includeSystemTables'
                        value = 'false'
                    }
                    property {
                        key = 'includeSystemSchemas'
                        value = 'false'
                    }
                    property {
                        key = 'includeSystemIndexes'
                        value = 'false'
                    }
                    property {
                        key = 'includeSystemForeignKeys'
                        value = 'false'
                    }
                    property {
                        key = 'includeSystemPrimaryKeys'
                        value = 'false'
                    }
                    property {
                        key = 'includeSystemUniqueKeys'
                        value = 'false'
                    }
                    property {
                        key = 'includeSystemCheckConstraints'
                        value = 'false'
                    }
                    property {
                        key = 'includeSystemSequences'
                        value = 'false'
                    }
                    property {
                        key = 'includeSystemRoutines'
                        value = 'false'
                    }
                    property {
                        key = 'includeSystemUDTs'
                        value = 'false'
                    }
                    property {
                        key = 'includeIndexes'
                        value = 'false'
                    }
                    property {
                        key = 'includeSequences'
                        value = 'false'
                    }
                    property {
                        key = 'includeRoutines'
                        value = 'false'
                    }
                    property {
                        key = 'includeUDTs'
                        value = 'false'
                    }
                }
            }
            target {
                packageName = 'org.certis.studyplatform.infrastructure.persistence.jooq.generated'
                directory = 'src/main/java'
            }
            generate {
                records = true
                pojos = true
                daos = false
                // 관계형 정보 생성 비활성화 (외래키 오류 방지)
                relations = false
                keys = false
            }
            // 오류 발생 시 경고로 처리하고 계속 진행
            strategy {
                name = 'org.jooq.codegen.DefaultGeneratorStrategy'
            }
        }
    }
}